# stream-alert-bot

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .woodpecker.yml  LICENSE  Makefile  README.md  TODO.md  __main__.py  default.nix  derivation.nix  flake.nix  pyproject.toml  requirements  requirements.txt  setup.py  shell.nix  twitch_alert_bot
etc/: settings-example.yml
nix/: default.nix  pkgs.nix  release.nix  requirements.nix
nix/modules/home-manager/: default.nix
sab/: __main__.py  constants.py
sab/api/: __init__.py  consumer.py  publisher.py  twitter.py
sab/api/consumers/: __init__.py  trovo.py  twitch.py
sab/api/publishers/: __init__.py  twitter.py
sab/helpers/: __init__.py  argparse.py  functionality.py  yaml.py
sab/validators/: __init__.py  parameters.py  settings.py
src/: functionality.py  twitch_operations.py  twitter_api.py  twitter_operations.py  yaml_operations.py
tab/: __init__.py  __main__.py
tab/api/: __init__.py  twitch.py  twitter.py
tab/helpers/: __init__.py  argparse.py  functionality.py  yaml.py
tab/validators/: __init__.py  settings.py
tests/: TODO.md  conftest.py  test_settings_loading.py  test_tweet.py  test_tweet_message.py
tests/misc/: wrong_syntax.yaml
