[tool.poetry]
name = "stream-alert-bot"
version = "0.2"
description = "Alerts when a streamer is live"
authors = ["P. R. d. O. <d.ol.rod@tutanota.com>"]
license = "GPL-3.0-only"
packages = [
	{ include = "sab" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.26.0"
python-twitter = "3.5"
PyYAML = "5.4.1"
twitchAPI = "2.5.0"
python-trovo = "^0.1.1"

[tool.poetry.dev-dependencies]
pycodestyle = "2.8.0"
pytest = "6.2.5"

[tool.poetry.scripts]
stream_alert_bot = "sab.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
