[tool.poetry]
name = "stream-alert-bot"
version = "0.3.1"
description = "Alerts when a streamer is live"
authors = ["P. R. d. O. <d.ol.rod@tutanota.com>"]
license = "GPL-3.0-only"
packages = [
	{ include = "sab" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"
python-twitter = "^3.5"
PyYAML = "^6.0"
twitchAPI = "^3.3"
python-trovo = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^22.12"
mypy = "^0.991"
types-PyYAML = "^6.0"
types-requests = "^2.28"
hatch-vcs = "^0.2.0"

[tool.poetry.scripts]
stream_alert_bot = "sab.__main__:main"

[tool.mypy]
python_version = 3.10

[[tool.mypy.overrides]]
module = [
  "trovoApi.*",
  "twitchAPI.*",
  "twitter.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
